--- a/compendium/sfrpg.starship-components.json
+++ b/compendium/sfrpg.starship-components.json
@@ -2,8 +2,8 @@
 	"label": "Vaisseaux - Composants",
 	"mapping": {
 		"frName": "name",
-		"frDescription": "data.description.value",
-		"frSource": "data.source"
+		"frDescription": "system.description.value",
+		"frSource": "system.source"
 	},
 	"entries": {
 		"Advanced long-range sensors": {
